<resources>
    <string name="app_name">Assignment2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="backBtn">Back</string>
    <string name="near_focal_point">Near Focal Point:</string>
    <string name="far_focal_point">Far Focal Point:</string>
    <string name="depth_of_field">Depth of Field:</string>
    <string name="hyper_focal_point">Hyper Focal Point:</string>
    <string name="displayLensDetails">Photo details with: </string>
    <string name="circle_of_confusion">Circle of Confusion [m]:</string>
    <string name="distance_to_subject">Distance to subject [m]:</string>
    <string name="selected_aperture">Selected aperture:</string>
    <string name="calculateBtn">Calculate</string>
    <string name="inputCOCEx">ex: 0.029 for 0.029m</string>
    <string name="inputDistanceEx">ex: 1.5 for 1.5m</string>
    <string name="inputApertureEx">ex: 2.8 for F2.8</string>
    <string name="ex_canon">ex: Canon</string>
    <string name="focal_length_mm">Focal Length (mm):</string>
    <string name="make">Make:</string>
    <string name="ex_200_for_200mm">ex: 200 for 200mm</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="please_select">Please select a lens:</string>
    <string name="aperture">Aperture:</string>
    <string name="prefillCOC">0.029</string>
    <string name="editBtn">Edit</string>
    <string name="deleteBtn">Delete</string>
    <string name="txtOptionalFeatures">Optional Features:\n1. App bar buttons\n2. Edit and delete lens\n3. Error checking input\n5. Save data\n7. Empty state</string>

</resources>