<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditLensActivity">



    <TextView
        android:id="@+id/edit_txtMake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="24dp"
        android:text="@string/make"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/edit_inputMake"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/ex_canon"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edit_txtMake"
        app:layout_constraintTop_toBottomOf="@+id/edit_txtMake" />

    <TextView
        android:id="@+id/edit_txtFocalLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/focal_length_mm"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edit_inputMake"
        app:layout_constraintTop_toBottomOf="@+id/edit_inputMake" />

    <EditText
        android:id="@+id/edit_inputFocalLength"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:hint="@string/ex_200_for_200mm"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edit_txtFocalLength"
        app:layout_constraintTop_toBottomOf="@+id/edit_txtFocalLength" />

    <TextView
        android:id="@+id/edit_textAperture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Aperture:"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edit_inputFocalLength"
        app:layout_constraintTop_toBottomOf="@+id/edit_inputFocalLength" />

    <EditText
        android:id="@+id/edit_inputAperture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:hint="ex: 2.8 for F2.8"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edit_textAperture"
        app:layout_constraintTop_toBottomOf="@+id/edit_textAperture" />

</androidx.constraintlayout.widget.ConstraintLayout>